--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ build:
     - npm run build
     - echo "Folder name in Digital Ocean Spaces - $TRAVIS_COMMIT"
     - mkdir -p dist/devtools/$TRAVIS_COMMIT
-    - mv dist/* dist/devtools/$TRAVIS_COMMIT/*
+    - mv dist/*.* dist/devtools/$TRAVIS_COMMIT/
 deploy:
   provider: s3
   access_key_id: "$DIGITAL_OCEAN_SPACES_KEY_ID"
@@ -15,3 +15,4 @@ deploy:
   endpoint: "$DIGITAL_OCEAN_SPACES_ENDPOINT"
   cache-control: "max-age=31536000"
   local_dir: dist
+  skip_cleanup: true
