--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ deploy:
   local_dir: dist
   skip_cleanup: true
   script:
+    - echo "Updating import map"
     - curl -u $DEPLOYER_USERNAME:$DEPLOYER_PASSWORD -d '{ "service":"@openmrs/devtools","url":"https://spa-modules.nyc3.digitaloceanspaces.com/devtools/"'$TRAVIS_COMMIT'"/devtools.js" }' -X PATCH https://$DEPLOYER_HOST/services\?env=$CI_ENVIRONMENT_NAME -H "Accept:application/json" -H "Content-Type:application/json"
   on:
     branch: master
