--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,10 @@
 {
   "extends": [
-    "react-important-stuff",
+    "ts-react-important-stuff",
     "plugin:prettier/recommended"
   ],
+  "globals": {
+    "System":  "readonly"
+  },
   "parser": "babel-eslint"
 }
