--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Dev tools for frontend devs using OpenMRSS",
   "scripts": {
     "start": "webpack-dev-server",
-    "lint": "eslint src/**/*",
+    "lint": "BABEL_ENV=lint eslint . --ext tsx",
     "test": "jest --config jest.json",
     "prettier": "prettier --write **/*",
     "watch-tests": "jest --config jest.json --watch",
@@ -20,35 +20,45 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-syntax-typescript": "^7.3.3",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "babel-eslint": "^10.0.1",
+    "@emotion/babel-preset-css-prop": "^10.0.9",
+    "babel-eslint": "^11.0.0-beta.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-config-react-important-stuff": "^1.1.0",
+    "eslint-config-ts-react-important-stuff": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "fork-ts-checker-webpack-plugin": "^1.3.7",
     "husky": "^2.4.0",
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.0",
+    "style-loader": "^0.23.1",
     "typescript": "^3.5.1",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.10",
+    "@reach/tabs": "^0.1.6",
     "@types/jest": "^24.0.13",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/single-spa-react": "^2.8.3",
+    "@types/systemjs": "^0.20.6",
+    "fhirclient": "git+https://github.com/smart-on-fhir/client-js.git",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "single-spa-react": "^2.10.1"
+    "single-spa-react": "^2.10.2"
   }
 }
