--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "es2016.array.include",
       "es2018"
     ],
+    "strictNullChecks": true,
     "noEmit": true
   },
   "include": ["src/**/*"]
