--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "openmrs-devtools",
+  "name": "@openmrs/esm-devtools",
   "description": "Dev tools for frontend devs using OpenMRSS",
+  "version": "1.0.0",
   "scripts": {
     "start": "webpack-dev-server",
     "lint": "eslint . --ext tsx",
@@ -9,6 +10,7 @@
     "watch-tests": "jest --config jest.json --watch",
     "typescript": "tsc",
     "start-https": "webpack-dev-server --https",
+    "prepublishOnly": "npm run build",
     "build": "webpack --mode production"
   },
   "husky": {
@@ -17,41 +19,42 @@
     }
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@emotion/babel-preset-css-prop": "^10.0.9",
-    "@emotion/core": "^10.0.14",
+    "@emotion/babel-preset-css-prop": "^10.0.14",
+    "@emotion/core": "^10.0.15",
     "babel-eslint": "^11.0.0-beta.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.5",
-    "css-loader": "^3.0.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-config-ts-react-important-stuff": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "fork-ts-checker-webpack-plugin": "^1.3.7",
-    "husky": "^2.4.0",
+    "fork-ts-checker-webpack-plugin": "^1.5.0",
+    "husky": "^2.7.0",
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
     "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.0",
+    "pretty-quick": "^1.11.1",
     "style-loader": "^0.23.1",
-    "typescript": "^3.5.1",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1"
+    "typescript": "^3.5.3",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "@reach/tabs": "^0.1.6",
-    "@types/jest": "^24.0.13",
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.8.4",
+    "@types/jest": "^24.0.17",
+    "@types/react": "^16.8.25",
+    "@types/react-dom": "^16.8.5",
     "@types/single-spa-react": "^2.8.3",
     "@types/systemjs": "^0.20.6",
     "react": "^16.8.6",
