--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "prepublishOnly": "npm run build",
     "build": "webpack --mode production"
   },
+  "browserslist": [
+    "extends browserslist-config-openmrs"
+  ],
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged && npm run lint && npm test && npm run typescript"
@@ -30,6 +33,7 @@
     "babel-eslint": "^11.0.0-beta.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.5",
+    "browserslist-config-openmrs": "^1.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
