--- a/package.json
+++ b/package.json
@@ -29,41 +29,41 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@emotion/babel-preset-css-prop": "^10.0.14",
-    "@emotion/core": "^10.0.15",
     "babel-eslint": "^11.0.0-beta.0",
-    "babel-jest": "^24.8.0",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.5",
     "browserslist-config-openmrs": "^1.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
+    "eslint": "^6.2.2",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-config-ts-react-important-stuff": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
-    "husky": "^2.7.0",
-    "jest": "^24.8.0",
-    "jest-cli": "^24.8.0",
+    "husky": "^3.0.4",
+    "jest": "^24.9.0",
+    "jest-cli": "^24.9.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "style-loader": "^0.23.1",
+    "style-loader": "^1.0.0",
     "typescript": "^3.5.3",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "@openmrs/react-root-decorator": "^1.0.0",
     "@reach/tabs": "^0.1.6",
-    "@types/jest": "^24.0.17",
-    "@types/react": "^16.8.25",
-    "@types/react-dom": "^16.8.5",
+    "@types/jest": "^24.0.18",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
     "@types/single-spa-react": "^2.8.3",
     "@types/systemjs": "^0.20.6",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "kremling": "^2.0.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "single-spa-react": "^2.10.2"
   }
 }
