--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
       "pre-commit": "pretty-quick --staged && npm run lint && npm test && npm run typescript"
     }
   },
+  "types": "src/openmrs-esm-devtools.tsx",
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
