--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
       "es2018"
     ],
     "strictNullChecks": true,
-    "noEmit": true
+    "noEmit": true,
+    "resolveJsonModule": true
   },
   "include": ["src/**/*"]
 }
