--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "browserslist": [
     "extends browserslist-config-openmrs"
   ],
+  "directories": {
+    "lib": "dist"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged && npm run lint && npm test && npm run typescript"
@@ -30,6 +33,9 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@openmrs/react-root-decorator": "^1.0.0",
+    "@reach/tabs": "^0.1.6",
+    "@types/jest": "^24.0.18",
     "babel-eslint": "^11.0.0-beta.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.5",
@@ -46,8 +52,10 @@
     "husky": "^3.0.4",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
+    "kremling": "^2.0.1",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
+    "single-spa-react": "^2.10.2",
     "style-loader": "^1.0.0",
     "systemjs-webpack-interop": "^1.1.0",
     "typescript": "^3.5.3",
@@ -56,16 +64,11 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
-    "@openmrs/react-root-decorator": "^1.0.0",
-    "@reach/tabs": "^0.1.6",
-    "@types/jest": "^24.0.18",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/single-spa-react": "^2.8.3",
     "@types/systemjs": "^0.20.6",
-    "kremling": "^2.0.1",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "single-spa-react": "^2.10.2"
+    "react-dom": "^16.9.0"
   }
 }
