--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@openmrs/esm-api": "1.0.3",
     "@openmrs/react-root-decorator": "^1.0.0",
     "@reach/tabs": "^0.1.6",
     "@types/jest": "^24.0.18",
@@ -55,6 +56,8 @@
     "kremling": "^2.0.1",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
+    "lodash-es": "^4.17.15",
+    "semver": "^6.3.0",
     "single-spa-react": "^2.10.2",
     "style-loader": "^1.0.0",
     "systemjs-webpack-interop": "^1.1.0",
