--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "description": "Dev tools for frontend devs using OpenMRSS",
   "main": "dist/openmrs-esm-devtools.js",
   "version": "1.1.0",
+  "license": "MPL-2.0",
   "scripts": {
     "start": "webpack-dev-server",
     "lint": "eslint . --ext tsx",
     "test": "jest --config jest.json",
-    "prettier": "prettier --write **/*",
     "watch-tests": "jest --config jest.json --watch",
     "typescript": "tsc",
-    "start-https": "webpack-dev-server --https",
     "prepublishOnly": "npm run build",
     "build": "webpack --mode production"
   },
@@ -22,7 +21,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && npm run lint && npm test && npm run typescript"
+      "pre-commit": "pretty-quick --staged && concurrently 'npm:test' 'npm:typescript' 'npm:lint'"
     }
   },
   "types": "src/openmrs-esm-devtools.tsx",
@@ -42,6 +41,7 @@
     "babel-loader": "^8.0.5",
     "browserslist-config-openmrs": "^1.0.0",
     "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^5.0.0",
     "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
