--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@openmrs/esm-devtools",
-  "description": "Dev tools for frontend devs using OpenMRSS",
+  "description": "Dev tools for frontend devs using OpenMRS",
   "main": "dist/openmrs-esm-devtools.js",
   "version": "1.2.0",
   "license": "MPL-2.0",
   "scripts": {
     "start": "webpack-dev-server",
-    "lint": "eslint . --ext tsx",
+    "lint": "eslint src --ext js,jsx,ts,tsx",
     "test": "jest --config jest.json",
     "watch-tests": "jest --config jest.json --watch",
+    "prettier": "prettier --write **/*",
     "typescript": "tsc",
     "prepublishOnly": "npm run build",
     "build": "webpack --mode production"
@@ -30,53 +31,55 @@
     "url": "git+https://github.com/openmrs/openmrs-esm-devtools.git"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "@openmrs/esm-api": "^1.2.2",
-    "@openmrs/react-root-decorator": "^1.0.0",
-    "@reach/tabs": "^0.1.6",
-    "@types/jest": "^24.0.18",
-    "babel-eslint": "^11.0.0-beta.0",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.5",
-    "browserslist-config-openmrs": "^1.0.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
+    "@openmrs/esm-api": "^2.0.0",
+    "@openmrs/react-root-decorator": "^3.2.0",
+    "@reach/tabs": "^0.10.0",
+    "@types/jest": "^25.2.1",
+    "babel-eslint": "^11.0.0-beta.2",
+    "babel-jest": "^25.3.0",
+    "babel-loader": "^8.1.0",
+    "browserslist-config-openmrs": "^1.0.1",
     "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^5.0.0",
-    "css-loader": "^3.2.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^6.2.2",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-config-ts-react-important-stuff": "^1.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "fork-ts-checker-webpack-plugin": "^1.5.0",
-    "husky": "^3.0.4",
-    "jest": "^24.9.0",
-    "jest-cli": "^24.9.0",
-    "kremling": "^2.0.1",
+    "concurrently": "^5.1.0",
+    "css-loader": "^3.5.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-ts-react-important-stuff": "^2.0.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "fork-ts-checker-webpack-plugin": "^4.1.3",
+    "husky": "^4.2.5",
+    "jest": "^25.3.0",
+    "jest-cli": "^25.3.0",
+    "kremling": "^2.0.3",
     "lodash-es": "^4.17.15",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1",
-    "semver": "^6.3.0",
-    "single-spa-react": "^2.10.2",
-    "style-loader": "^1.1.4",
-    "systemjs-webpack-interop": "^1.1.0",
-    "typescript": "^3.5.3",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0"
+    "prettier": "^2.0.4",
+    "pretty-quick": "^2.0.1",
+    "semver": "^7.3.2",
+    "single-spa-react": "^2.13.0",
+    "style-loader": "^1.1.3",
+    "systemjs-webpack-interop": "^2.0.0",
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@openmrs/esm-module-config": "^1.3.0",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "@types/single-spa-react": "^2.8.3",
+    "@openmrs/esm-module-config": "^1.3.1",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@types/single-spa-react": "^2.12.0",
     "@types/systemjs": "^6.1.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "i18next": "^19.4.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-i18next": "^11.3.4"
   }
 }
