--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ script:
   - npm run typescript
   - npm run build
   - echo "Folder name in Digital Ocean Spaces - $TRAVIS_COMMIT"
-  - mkdir -p dist/@openmrs/esm-devtools/$TRAVIS_COMMIT
-  - mv dist/*.* dist/@openmrs/esm-devtools/$TRAVIS_COMMIT/
+  - mkdir -p dist/@openmrs/esm-devtools-app/$TRAVIS_COMMIT
+  - mv dist/*.* dist/@openmrs/esm-devtools-app/$TRAVIS_COMMIT/
 deploy:
   provider: s3
   access_key_id: "$DIGITAL_OCEAN_SPACES_KEY_ID"
@@ -22,6 +22,7 @@ deploy:
   on:
     branch: master
 after_deploy:
-  - statuscode=$(curl --output /dev/null --write-out %{http_code} -u $DEPLOYER_USERNAME:$DEPLOYER_PASSWORD -d '{ "service":"@openmrs/esm-devtools","url":"https://spa-modules.nyc3.digitaloceanspaces.com/@openmrs/esm-devtools/'$TRAVIS_COMMIT'/openmrs-esm-devtools.js" }' -X PATCH $DEPLOYER_HOST/services\?env=prod -H "Accept:application/json" -H "Content-Type:application/json")
+  - echo "Updating import map to point to new version of @openmrs/esm-devtools-app"
+  - statuscode=$(curl --output /dev/null --write-out %{http_code} -u $DEPLOYER_USERNAME:$DEPLOYER_PASSWORD -d '{ "service":"@openmrs/esm-devtools-app","url":"https://spa-modules.nyc3.digitaloceanspaces.com/@openmrs/esm-devtools-app/'$TRAVIS_COMMIT'/openmrs-esm-devtools.js" }' -X PATCH $DEPLOYER_HOST/services\?env=prod -H "Accept:application/json" -H "Content-Type:application/json")
   - echo "Deployment Status Code --> ${statuscode}"
   - if [ "$statuscode" -ne 200 ]; then travis_terminate "$statuscode"; fi
