--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@openmrs/esm-devtools-app",
+  "version": "2.0.1",
   "description": "Dev tools for frontend devs using OpenMRS",
   "main": "dist/openmrs-esm-devtools.js",
-  "version": "2.0.0",
+  "types": "src/index.ts",
   "license": "MPL-2.0",
+  "homepage": "https://github.com/openmrs/openmrs-esm-devtools#readme",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "openmrs debug --importmap @",
     "lint": "eslint src --ext js,jsx,ts,tsx",
     "test": "jest --config jest.json",
     "watch-tests": "jest --config jest.json --watch",
@@ -17,18 +19,32 @@
   "browserslist": [
     "extends browserslist-config-openmrs"
   ],
-  "directories": {
-    "lib": "dist"
+  "keywords": [
+    "openmrs"
+  ],
+  "publishConfig": {
+    "access": "public"
   },
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged && concurrently 'npm:test' 'npm:typescript' 'npm:lint'"
     }
   },
-  "types": "src/openmrs-esm-devtools.tsx",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/openmrs/openmrs-esm-devtools.git"
+  },
+  "bugs": {
+    "url": "https://github.com/openmrs/openmrs-esm-devtools/issues"
+  },
+  "dependencies": {},
+  "peerDependencies": {
+    "@openmrs/esm-api": "^3.0.0",
+    "@openmrs/esm-config": "^3.0.0",
+    "i18next": "^19.4.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-i18next": "^11.3.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -37,10 +53,15 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
-    "@openmrs/esm-api": "^2.0.0",
+    "@openmrs/esm-api": "^3.0.0",
+    "@openmrs/esm-config": "^3.0.0",
     "@openmrs/react-root-decorator": "^3.2.0",
     "@reach/tabs": "^0.10.0",
     "@types/jest": "^25.2.2",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@types/single-spa-react": "^2.12.0",
+    "@types/systemjs": "^6.1.0",
     "babel-eslint": "^11.0.0-beta.2",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
@@ -56,12 +77,16 @@
     "eslint-plugin-prettier": "^3.1.3",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
     "husky": "^4.2.5",
+    "i18next": "^19.4.1",
     "jest": "^26.0.1",
     "jest-cli": "^26.0.1",
     "kremling": "^2.0.3",
     "lodash-es": "^4.17.15",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-i18next": "^11.3.4",
     "semver": "^7.3.2",
     "single-spa-react": "^2.13.0",
     "style-loader": "^1.1.3",
@@ -70,16 +95,5 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
-  },
-  "dependencies": {
-    "@openmrs/esm-module-config": "^2.2.0",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
-    "@types/single-spa-react": "^2.12.0",
-    "@types/systemjs": "^6.1.0",
-    "i18next": "^19.4.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-i18next": "^11.3.4"
   }
 }
