--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint src --ext js,jsx,ts,tsx",
     "test": "jest --config jest.json",
     "watch-tests": "jest --config jest.json --watch",
-    "prettier": "prettier --write **/*",
+    "prettier": "prettier 'src/**/*' --write",
     "typescript": "tsc",
     "prepublishOnly": "npm run build",
     "build": "webpack --mode production"
@@ -82,6 +82,7 @@
     "jest-cli": "^26.0.1",
     "kremling": "^2.0.3",
     "lodash-es": "^4.17.15",
+    "openmrs": "^3.0.2",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "react": "^16.13.1",
