--- a/package.json
+++ b/package.json
@@ -37,14 +37,21 @@
   "bugs": {
     "url": "https://github.com/openmrs/openmrs-esm-devtools/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@openmrs/react-root-decorator": "^3.3.1",
+    "kremling": "^2.0.3",
+    "single-spa-react": "^2.13.0",
+    "systemjs-webpack-interop": "^2.0.0"
+  },
   "peerDependencies": {
     "@openmrs/esm-api": "^3.0.0",
     "@openmrs/esm-config": "^3.0.0",
     "i18next": "^19.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-i18next": "^11.3.4"
+    "react-i18next": "^11.3.4",
+    "rxjs": "^6.5.3",
+    "single-spa": "^4.4.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -55,7 +62,6 @@
     "@babel/preset-typescript": "^7.9.0",
     "@openmrs/esm-api": "^3.0.0",
     "@openmrs/esm-config": "^3.0.0",
-    "@openmrs/react-root-decorator": "^3.3.1",
     "@reach/tabs": "^0.10.0",
     "@types/jest": "^25.2.2",
     "@types/react": "^16.9.34",
@@ -80,18 +86,16 @@
     "i18next": "^19.4.1",
     "jest": "^26.0.1",
     "jest-cli": "^26.0.1",
-    "kremling": "^2.0.3",
-    "lodash-es": "^4.17.15",
     "openmrs": "^3.0.2",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.3.4",
+    "rxjs": "^6.5.3",
+    "single-spa": "^4.4.1",
     "semver": "^7.3.2",
-    "single-spa-react": "^2.13.0",
     "style-loader": "^1.1.3",
-    "systemjs-webpack-interop": "^2.0.0",
     "typescript": "^4.0.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
